Fix extra space for #92

--- a/assets/css/pages/_student.scss
+++ b/assets/css/pages/_student.scss
@@ -12,7 +12,7 @@ $student-profile-header-background: #f6f6f6;
 	background-color: $student-profile-header-background;
 	display: flex;
 	overflow: hidden;
-	height: 500px;
+	height: 420px;
 }
 
 .student-profile-header-wrapper {
